# nnx

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: create-release.yml  publish-package.yml  run-tests.yml
docs/: blog.md  quick_start.ipynb  tiny_nnx.ipynb
examples/: 00_demo.ipynb  00_demo.py  01_basic.py  01_functional_api.py  01_jit_transform.py  02_functional_api.py  02_jit_filter.py  02_lifted_transforms.py  02_partition_api.py  02_split_api.py  03_partition_api.py  03_train_state.py  04_bounded.py  04_ideas.py  04_jit_filter_pure.py  04_pure.py  04_tranformer.py  04_unbound.py  05_pure.py  05_tranformer.py  05_vae.py  06_scan_over_layers.py  06_tranformer.py  06_vae.py  07_scan_over_layers.py  07_tranformer.py  07_transformer.py  08_save_load_checkpoints.py  09_parameter_surgery.py  basic.py  partitioned.py  with_getitem.py  with_ref_fields.py
ideas/: nnx_example.py  pure_example.py  pure_nnx_example.py  pure_pytree_example.py  shape_inference.py
ideas/pure/: __init__.py  module.py  partitioning.py  rngs.py  state.py
ideas/pure/full/: partitioning_full.py
ideas/pure_pytree/: __init__.py  dataclass.py  module.py  partitioning.py
ideas/pure_pytree/full/: partitioning_full.py  state_full.py
nnx/: __init__.py  container.py  containers.py  context.py  contextlib.py  dataclass.py  dataclasses.py  errors.py  fields.py  filters.py  helpers.py  ids.py  module.py  module_helpers.py  nodes.py  partitioning.old.py  partitioning.py  pytree.py  pytreelib.py  ref.py  ref_field.py  ref_fields.py  reference.py  refs.py  reprlib.py  rng_stream.py  scope.py  scope_lib.py  spmd.py  state.py  tracers.py  transforms.py  utils.py
nnx/nn/: __init__.py  activations.py  dtypes.py  initializers.py  linear.py  module.py  normalization.py  pooling.py  stochastic.py
pure/: __init__.py  partitioning.py  state.py
scripts/: run-all-examples.bash  update_version.py
tests/: test_containers.py  test_context.py  test_fields.py  test_filters.py  test_helpers.py  test_ids.py  test_integration.py  test_module.py  test_partitioning.py  test_pytree.py  test_ref.py  test_ref_field.py  test_rng_stream.py  test_scope.py  test_spmd.py  test_transforms.py  test_variable.py
tests/tests_pure/: test_partitioning.py  test_state.py
